SUBDIRS = containers

EXTRA_DIST = ./rules.hpp \
./enums.hpp \
./debug.hpp \
./is_same.hpp \
./runtime_error.hpp \
./generate_cpp.hpp \
./string_token.hpp \
./compile_assert.hpp \
./Makefile.am \
./internals.hpp \
./state_machine.hpp \
./generator.hpp \
./utf_iterators.hpp \
./sm_traits.hpp \
./lookup.hpp \
./licence_1_0.txt \
./char_traits.hpp \
./size_t.hpp \
./bool.hpp \
./file_shared_iterator.hpp
