SUBDIRS = containers parser partition

EXTRA_DIST = ./bool.hpp \
./char_traits.hpp \
./compile_assert.hpp \
./debug.hpp \
./enums.hpp \
./generate_cpp.hpp \
./generator.hpp \
./internals.hpp \
./is_same.hpp \
./licence_1_0.txt \
./lookup.hpp \
./match_results.hpp \
./memory_file.hpp \
./rules.hpp \
./runtime_error.hpp \
./serialise.hpp \
./size_t.hpp \
./sm_traits.hpp \
./state_machine.hpp \
./stream_shared_iterator.hpp \
./string_token.hpp \
./utf_iterators.hpp
