#   Copyright (C) 2009, 2010 Jarryd Beck and John Plaice
#
#   This file is part of TransLucid.
#
#   TransLucid is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 3, or (at your option)
#   any later version.
#
#   TransLucid is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with TransLucid; see the file COPYING.  If not see
#   <http://www.gnu.org/licenses/>.
SUBDIRS=detail types

includesdir = $(prefix)/include/tl

includes_HEADERS = arrayhd.hpp ast.hpp bestfit.hpp builtin_types.hpp 
  cache.hpp \
  charset.hpp compiled_functors.hpp consthd.hpp container.hpp \
  dimtranslator.hpp equation.hpp equation_parser.hpp exception.hpp \
  expr_compiler.hpp expr_parser.hpp fixed_indexes.hpp function_registry.hpp \
  header_parser.hpp hyperdaton.hpp instant_parser.hpp \
  internal_strings.hpp lexer.hpp lexer_util.hpp library.hpp \
  line_parser.hpp line_tokenizer.hpp maxsharelist.hpp object_registry.hpp \
  parser_api.hpp parser_defs.hpp parser_header.hpp parser_iterator.hpp \
  parser_util.hpp printer.hpp range.hpp registries.hpp rename.hpp \
  set_types.hpp system.hpp translator.hpp tree_printer.hpp tree_to_wstree.hpp \
  tuple_parser.hpp types.hpp types_fwd.hpp types_util.hpp utility.hpp \
  workshop.hpp 
