#   Copyright (C) 2009, 2010 Jarryd Beck and John Plaice
#
#   This file is part of TransLucid.
#
#   TransLucid is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 3, or (at your option)
#   any later version.
#
#   TransLucid is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with TransLucid; see the file COPYING.  If not see
#   <http://www.gnu.org/licenses/>.
SUBDIRS=detail types hyperdatons

includesdir = $(prefix)/include/tl

includes_HEADERS = ast.hpp ast_fwd.hpp bestfit.hpp builtin_types.hpp \
  cache.hpp \
  charset.hpp constws.hpp context.hpp \
  dimtranslator.hpp equation.hpp exception.hpp \
  eval_workshops.hpp fixed_indexes.hpp function_registry.hpp \
  gmpxx_fwd.hpp header_parser.hpp hyperdaton.hpp \
  internal_strings.hpp lexer_util.hpp library.hpp \
  line_tokenizer.hpp mpl.hpp \
  object_registry.hpp output.hpp \
  parser_api.hpp parser_defs.hpp parser_iterator.hpp \
  range.hpp registries.hpp rename.hpp semantic_transform.hpp \
  set_types.hpp system.hpp system_object.hpp system_util.hpp \
  tree_printer.hpp tree_rewriter.hpp tree_to_wstree.hpp \
  types.hpp types_basic.hpp types_fwd.hpp types_util.hpp utility.hpp \
  uuid.hpp variant.hpp workshop.hpp workshop_builder.hpp

EXTRA_DIST = CMakeLists.txt
