#   Copyright (C) 2009--2012 Jarryd Beck
#
#   This file is part of TransLucid.
#
#   TransLucid is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 3, or (at your option)
#   any later version.
#
#   TransLucid is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with TransLucid; see the file COPYING.  If not see
#   <http://www.gnu.org/licenses/>.

includesdir = $(prefix)/include/tl/types

includes_HEADERS = boolean.hpp calc.hpp char.hpp demand.hpp dimension.hpp \
fixed_number.hpp floatmp.hpp function.hpp hyperdatons.hpp \
intension.hpp intmp.hpp numbers.hpp numeric.hpp \
range.hpp special.hpp string.hpp tuple.hpp type.hpp union.hpp \
uuid.hpp

EXTRA_DIST = CMakeLists.txt
